# benchmarks

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: bench_lnx_tantivy.rs  datasets.rs  main.rs  prep_datasets.rs
