[package]
name = "lnx-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
flume = "0.11.1"
glob = "0.3.1"
itertools = "0.13.0"
humansize = "2.1.3"
num_cpus = "1.16.0"


serde = { version = "1", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
time = { version = "0.3.37", features = ["serde-well-known", "serde", "parsing"] }
clap = { version = "4.5.23", features = ["derive"] }
mimalloc = { version = "0.1.43", default-features = false }
quick-xml = { version = "0.37.1", features = ["serialize"] }

lnx-fs = { git = "https://github.com/lnx-search/lnx.git", branch = "0.10.0-lighting-feature" }
lnx-tantivy = { git = "https://github.com/lnx-search/lnx.git", branch = "0.10.0-lighting-feature", features = ["tantivy-full"] }

[features]
lnx-tantivy = []
lnx-fs = []
prep-datasets = []
# default = ["lnx-tantivy"]
